--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,7 @@
+server:
+  port: ${PORT:8080}
+
+
 spring:
   datasource:
     url: ${MYSQL_URL}
@@ -6,4 +10,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+     database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: false
