--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,29 +1,11 @@
-# server:
-#   port: ${PORT:8080}
-
-
-# spring:
-#   datasource:
-#     url: ${MYSQL_URL}
-#     username: ${MYSQLUSER}
-#     password: ${MYSQLPASSWORD}
-#   jpa:
-#     hibernate:
-#       ddl-auto: update
-#      database-platform: org.hibernate.dialect.MySQL8Dialect
-#     show-sql: false
-
-
 server:
   port: ${PORT:8080}
 
 spring:
-  profiles:
-    active: ${SPRING_PROFILES_ACTIVE:prod}
   datasource:
-    url: ${MYSQL_URL}
-    username: ${MYSQLUSER}
-    password: ${MYSQLPASSWORD}
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -32,4 +14,5 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
-  expirationMs: ${JWT_EXPIRATION_MS}
+  access-token-expiration: ${JWT_ACCESS_EXPIRATION}
+  refresh-token-expiration: ${JWT_REFRESH_EXPIRATION}
